# parse_snappy

./: LICENSE  cat_snappy  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: release_template.md
.github/workflows/: create-release-branch.yml
parse_snappy/: parse_snappy.py
script/: cat_snappy
